--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
                     <option value="expense">Expense</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="category">Category</label>
+                <select id="category" required>
+                    <option value="">Select a category</option>
+                    <option value="Food">Food</option>
+                    <option value="Rent">Rent</option>
+                    <option value="Utilities">Utilities</option>
+                    <option value="Entertainment">Entertainment</option>
+                    <option value="Transportation">Transportation</option>
+                    <option value="Salary">Salary</option>
+                    <option value="Investment">Investment</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
             <button type="submit">Add Transaction</button>
         </form>
     </section>
@@ -56,6 +70,13 @@
                 <p><span id="balance">$0</span></p>
             </div>
         </div>
+    </section>
+
+    <!-- Category Breakdown Section -->
+    <section id="category-breakdown">
+        <h2>Spending by Category</h2>
+        <!-- This container will be dynamically populated with category spending details -->
+        <div id="categories-container"></div>
     </section>
 
     <!-- Transaction List Section -->
