--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
         <p>Keep track of your income and expenses easily.</p>
     </header>
 
+    <!-- Monthly Goal Section -->
+    <section id="monthly-goal-section">
+        <h2>Monthly Goal</h2>
+        <div class="goal-form">
+            <div class="form-group">
+                <label for="goal-amount">Goal Amount:</label>
+                <input type="number" id="goal-amount" placeholder="Enter goal amount" min="0" step="0.01">
+            </div>
+            <div class="form-group">
+                <label for="goal-type">Goal Type:</label>
+                <select id="goal-type">
+                    <option value="positive">Positive (be above a certain amount)</option>
+                    <option value="negative">Negative (be below a certain amount)</option>
+                    <option value="period">After a certain period</option>
+                </select>
+            </div>
+            <div id="period-options" class="hidden">
+                <div class="form-group">
+                    <label for="goal-days">Time Period (days):</label>
+                    <input type="number" id="goal-days" placeholder="Number of days" min="1">
+                </div>
+                <div class="form-group">
+                    <label for="goal-difference">Target Difference:</label>
+                    <input type="number" id="goal-difference" placeholder="Amount above/below" step="0.01">
+                </div>
+            </div>
+            <button type="button" id="set-goal-btn">Set Goal</button>
+        </div>
+        <div id="goal-status">
+            <p id="current-goal">No goal set</p>
+            <p id="goal-progress">Set a goal to track your progress</p>
+            <!-- Optional: Add a visual progress indicator here -->
+            <div class="goal-progress-container">
+                <div id="goal-progress-bar" class="goal-progress-bar"></div>
+            </div>
+        </div>
+    </section>
+
     <!-- Transaction Form Section -->
     <section id="transaction-form">
         <h2>Add Transaction</h2>
@@ -49,6 +87,19 @@
                     <option value="Other">Other</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="recurrence">Recurring?</label>
+                <select id="recurrence" required>
+                    <option value="one-time">One-Time</option>
+                    <option value="recurring">Recurring</option>
+                </select>
+            </div>
+            <div id="recurrence-options" class="hidden">
+                <div class="form-group">
+                    <label for="recurrence-interval">Recurrence Interval (days):</label>
+                    <input type="number" id="recurrence-interval" placeholder="Repeat every X days" min="1">
+                </div>
+            </div>
             <button type="submit">Add Transaction</button>
         </form>
     </section>
@@ -79,11 +130,19 @@
         <div id="categories-container"></div>
     </section>
 
-    <!-- Transaction List Section -->
-    <section id="transaction-list">
-        <h2>Transaction History</h2>
-        <ul id="transactions">
-            <!-- Transactions will be dynamically added here via JavaScript -->
+    <!-- Income Transactions Section -->
+    <section id="income-list-section">
+        <h2>Income</h2>
+        <ul id="income-transactions">
+            <!-- Income transactions will be dynamically added here via JavaScript -->
+        </ul>
+    </section>
+
+    <!-- Expense Transactions Section -->
+    <section id="expense-list-section">
+        <h2>Expenses</h2>
+        <ul id="expense-transactions">
+            <!-- Expense transactions will be dynamically added here via JavaScript -->
         </ul>
     </section>
 
