--- a/index.html
+++ b/index.html
@@ -282,7 +282,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- Application JavaScript Files -->
-    <script src="js/storage-test.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
